package fr.football.patterns.command;

public interface Command {
    void execute();
}
